# voice-cube

./: .gitignore  CHANGELOG.md  LICENSE  README.md  app.py  config.py  pyproject.toml  requirements.txt
ai/: __init__.py  rvc_engine.py
assets/models/: vec-256-layer-9.onnx  woman_1.onnx
docs/: architecture.md  technical.md
dsp/: __init__.py  effects.py  formant_shift.py  pitch_extract.py  pitch_shift.py  postprocessor.py  preprocessor.py  presets.py  visualizer.py
scripts/: download_rvc_models.py
tests/: __init__.py  diagnose.py  test_dsp.py  verify_fixes.py
ui/: __init__.py  recorder.py
